--- a/src/Win32/Win32.csproj
+++ b/src/Win32/Win32.csproj
@@ -7,6 +7,7 @@
 
     <!-- This package is just a wrapper -->
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <IncludeSymbols>false</IncludeSymbols>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\AdvApi32\AdvApi32.csproj" />
