Fix build break from Azure Pipelines agent change

--- a/src/MSCorEE/MSCorEE.csproj
+++ b/src/MSCorEE/MSCorEE.csproj
@@ -9,7 +9,7 @@
     <ProjectReference Include="..\Kernel32\Kernel32.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <COMFileReference Include="$(MSBuildProgramFiles32)\Windows Kits\NETFXSDK\4.7.2\Lib\um\x86\metahost.tlb">
+    <COMFileReference Include="$(RepoRootPath)lib\metahost.tlb">
       <Visible>false</Visible>
       <EmbedInteropTypes>true</EmbedInteropTypes>
     </COMFileReference>
