--- a/src/NTDll/NTDll.csproj
+++ b/src/NTDll/NTDll.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>$(PlatformAndPortableFrameworks)</TargetFrameworks>
     <StoreBanned>true</StoreBanned>
