--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -13,6 +13,22 @@
     <DefineConstants Condition=" '$(TargetFrameworkIdentifier)' != '.NETFramework' ">$(DefineConstants);APISets</DefineConstants>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'uap10.0' ">
+    <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
+    <TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
+    <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
+    <TargetPlatformVersion>10.0.17763.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.15063.0</TargetPlatformMinVersion>
+    <NugetTargetMoniker>UAP,Version=v10.0</NugetTargetMoniker>
+    <DefineConstants>$(DefineConstants);WINDOWS_UWP</DefineConstants>
+    <ImplicitFrameworkDefine>UAP10_0</ImplicitFrameworkDefine>
+  </PropertyGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'uap10.0' ">
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="$(ExtrasUwpMetaPackageVersion)" PrivateAssets="all" IsImplicitlyDefined="true"/>
+  </ItemGroup>
+
   <PropertyGroup Condition=" '$(IsTestProject)' == 'true' ">
     <CoverletOutputFormat>cobertura</CoverletOutputFormat>
     <Exclude>[xunit.*]*</Exclude>
