--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,15 +9,80 @@ trigger:
     - '*.md'
     - .vscode/
 
-variables:
-  TreatWarningsAsErrors: true
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  BuildConfiguration: Release
-  BuildPlatform: Any CPU
-  codecov_token: e300ab17-4cd6-43b5-8292-e824cb320ed3
-  ci_feed: 6ed146e5-8e9c-46d6-a40f-da9367ed50cd/c20edbb7-8403-4456-8f43-f46b47e360b1
-  NUGET_PACKAGES: $(Agent.TempDirectory)/.nuget/packages
-  GeneratePInvokesTxt: true
+stages:
+- stage: Build
+  variables:
+    TreatWarningsAsErrors: true
+    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+    BuildConfiguration: Release
+    BuildPlatform: Any CPU
+    codecov_token: e300ab17-4cd6-43b5-8292-e824cb320ed3
+    ci_feed: 6ed146e5-8e9c-46d6-a40f-da9367ed50cd/c20edbb7-8403-4456-8f43-f46b47e360b1
+    NUGET_PACKAGES: $(Agent.TempDirectory)/.nuget/packages
+    GeneratePInvokesTxt: true
+  jobs:
+  - template: azure-pipelines/build.yml
 
-jobs:
-- template: azure-pipelines/build.yml
+- stage: GitHubRelease
+  displayName: GitHub Release
+  jobs:
+  - deployment: create
+    pool:
+      vmImage: ubuntu-latest
+    environment: Approval
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - download: current
+            artifact: pinvoke_coverage_report-Windows
+            displayName: Downloading pinvoke coverage report
+          - download: current
+            artifact: pinvoke_method_coverage-Windows
+            displayName: Downloading pinvoke method coverage
+          - task: GitHubRelease@1
+            displayName: GitHub release (create)
+            inputs:
+              gitHubConnection: GitHub AArnott
+              repositoryName: $(Build.Repository.Name)
+              tagSource: userSpecifiedTag
+              tag: v$(Build.BuildNumber)
+              title: v$(Build.BuildNumber)
+              isDraft: true
+              assets: |
+                $(Pipeline.Workspace)/pinvoke_method_coverage-Windows/*
+                $(Pipeline.Workspace)/pinvoke_coverage_report-Windows/*
+              changeLogCompareToRelease: lastNonDraftRelease
+              changeLogType: issueBased
+              changeLogLabels: |
+                [
+                  { "label" : "bug", "displayName" : "Fixes", "state" : "closed" },
+                  { "label" : "enhancement", "displayName": "Enhancements", "state" : "closed" }
+                ]
+
+- stage: nuget_org
+  displayName: nuget.org
+  condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+  jobs:
+  - deployment: push
+    pool:
+      vmImage: ubuntu-latest
+    environment: No-Approval # Approval is already granted in the release stage.
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - download: current
+            artifact: deployables-Windows
+            displayName: Download deployables-Windows artifact
+          - task: NuGetToolInstaller@1
+            displayName: Use NuGet 5.x
+            inputs:
+              versionSpec: 5.x
+          - task: NuGetCommand@2
+            displayName: NuGet push
+            inputs:
+              command: push
+              packagesToPush: $(Pipeline.Workspace)/deployables-Windows/*.nupkg
+              nuGetFeedType: external
+              publishFeedCredentials: nuget.org
