--- a/src/Cabinet.Tests/Cabinet.Tests.csproj
+++ b/src/Cabinet.Tests/Cabinet.Tests.csproj
@@ -7,4 +7,9 @@
     <ProjectReference Include="..\Kernel32\Kernel32.csproj" />
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="demo.CAB">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
