Add x64 test run

--- a/azure-pipelines/dotnet.yml
+++ b/azure-pipelines/dotnet.yml
@@ -9,6 +9,7 @@ steps:
 
 - powershell: .\build.ps1 -Test
   displayName: Test
+  failOnStderr: true
 
 - pwsh: >
     dotnet tool install --tool-path obj SignClient
