--- a/src/Win32/Win32.csproj
+++ b/src/Win32/Win32.csproj
@@ -14,14 +14,14 @@
     <ProjectReference Include="..\AdvApi32\AdvApi32.csproj" />
     <ProjectReference Include="..\BCrypt\BCrypt.csproj" />
     <ProjectReference Include="..\Cabinet\Cabinet.csproj" />
-    <ProjectReference Include="..\CfgMgr32\CfgMgr32.csproj" Condition="$(TargetFramework) == 'netstandard2.0'" />
+    <ProjectReference Include="..\CfgMgr32\CfgMgr32.csproj" />
     <ProjectReference Include="..\Crypt32\Crypt32.csproj" />
     <ProjectReference Include="..\DbgHelp\DbgHelp.csproj" />
     <ProjectReference Include="..\DwmApi\DwmApi.csproj" />
     <ProjectReference Include="..\Gdi32\Gdi32.csproj" />
     <ProjectReference Include="..\Hid\Hid.csproj" />
     <ProjectReference Include="..\ImageHlp\ImageHlp.csproj" />
-    <ProjectReference Include="..\IPHlpApi\IPHlpApi.csproj" Condition="$(TargetFramework) != 'netstandard1.1'" />
+    <ProjectReference Include="..\IPHlpApi\IPHlpApi.csproj" />
     <ProjectReference Include="..\Kernel32\Kernel32.csproj" />
     <ProjectReference Include="..\Msi\Msi.csproj" />
     <ProjectReference Include="..\NCrypt\NCrypt.csproj" />
@@ -38,7 +38,7 @@
     <ProjectReference Include="..\UxTheme\UxTheme.csproj" />
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
     <ProjectReference Include="..\Windows.ShellScalingApi\Windows.ShellScalingApi.csproj" />
-    <ProjectReference Include="..\WinUsb\WinUsb.csproj" Condition="$(TargetFramework) != 'netstandard1.1'" />
+    <ProjectReference Include="..\WinUsb\WinUsb.csproj" />
     <ProjectReference Include="..\WtsApi32\WtsApi32.csproj" />
     <ProjectReference Include="..\Magnification\Magnification.csproj" />
   </ItemGroup>
