--- a/src/WinUsb/WinUsb.csproj
+++ b/src/WinUsb/WinUsb.csproj
@@ -7,4 +7,8 @@
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
     <ProjectReference Include="..\Kernel32\Kernel32.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.4" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
+  </ItemGroup>
 </Project>
