--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -1,5 +1,8 @@
 parameters:
-  windowsPool: Hosted Windows 2019 with VS2019
+- name: windowsPool
+  type: object
+  default:
+    vmImage: windows-2022
 
 jobs:
 - job: Windows
@@ -11,8 +14,9 @@ jobs:
     clean: true
   - template: install-dependencies.yml
 
-  - powershell: '& (./azure-pipelines/Get-nbgv.ps1) cloud -p src'
+  - powershell: '& (./azure-pipelines/Get-nbgv.ps1) cloud -p src -c'
     displayName: Set build number
 
   - template: dotnet.yml
+  - template: publish-codecoverage.yml
   - template: publish-deployables.yml
